--- a/web/index.html
+++ b/web/index.html
@@ -1,2 +1,110 @@
-<h1>ola</h1>
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <title></title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="description" content="">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+  <meta property="og:image:alt" content="">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#fafafa">
+
+  <link rel="stylesheet" href="style/index.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+</head>
+
+<body>
+  <div id="app">
+	<h1>Here's some birthdays:</h1>
+	<div id="birthdays"></div>
+  </div>
+  <pre id="console"></pre>
+
+  <script type="module" src="./js/main.tsx"></script>
+</body>
+
+<script>
+window.addEventListener('DOMContentLoaded', init);
+
+const BASE_API = 'http://34.89.69.70:8888';
+
+async function init(){
+  const tg = window.Telegram.WebApp;
+
+  tg.setBackgroundColor('#eeeeee');
+
+  tg.MainButton.text = 'Close';
+  tg.MainButton.onClick(buttonClicked);
+  tg.MainButton.show();
+
+	const response = await getBirthdays(tg.initData);
+	const responseData = await response.json();
+
+	//log(responseData.birthdays);
+	displayBirthdays(responseData.birthdays);
+}
+
+function log(str){
+  if(typeof str === 'object') str = JSON.stringify(str, null, 2);
+  document.querySelector('#console').innerText = str;
+}
+
+function buttonClicked(){
+  window.Telegram.WebApp.close();
+}
+
+async function getBirthdays(data){
+	try {
+		return await fetch(`${BASE_API}/api/miniapp/birthdays`, {
+			method: 'POST',
+			headers: {
+				'Accept': 'application/json',
+				'Content-Type': 'application/json'
+			},
+			body: JSON.stringify({data})
+		});
+	} catch (e){
+		console.error(e);
+	}
+}
+
+function displayBirthdays(groups){
+	const el = document.querySelector('#birthdays');
+
+	for(let g of groups){
+		const title = document.createElement('h3');
+		title.innerText = `🎂 ${g.group}`;
+
+		el.appendChild(title);
+
+		const list = document.createElement('ul');
+
+		for(let b of g.birthdays){
+			const li = document.createElement('li');
+			li.innerText = b.formattedLine;
+
+			list.appendChild(li);
+		}
+
+		el.appendChild(list);
+	
+	}
+	
+
+}
+</script>
+
+</html>
 
