--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@ window.addEventListener('DOMContentLoaded', init);
 
 //const BASE_API = 'http://34.89.69.70:8888';
 // TODO how can this be dynamic
-const BASE_API = 'https://birthday-bot-prod.fly.dev/';
+const BASE_API = 'https://birthday-bot-dev-rr.fly.dev';
 
 async function init(){
   const tg = window.Telegram.WebApp;
