--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
 
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
