--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
-<body style="background: var(--tg-theme-bg-color)">
+<body style="background: var(--tg-theme-secondary-bg-color)">
 	<div id="app"></div>
 	<pre id="console"></pre>
 </body>
